[gd_scene load_steps=4 format=3 uid="uid://cnvc3c5c6c8mj"]

[ext_resource type="Script" uid="uid://cad734vbhmmtg" path="res://scripts/ui.gd" id="1_nt7q6"]
[ext_resource type="PackedScene" uid="uid://decqbrmnhe0kb" path="res://scenes/Energy.tscn" id="2_x4jx1"]
[ext_resource type="PackedScene" uid="uid://ciuvi7tl2l5wv" path="res://scenes/pause_menu.tscn" id="2_yev5y"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nt7q6")

[node name="PauseMenu" parent="." instance=ExtResource("2_yev5y")]
layout_mode = 1

[node name="EnergyBar" parent="." instance=ExtResource("2_x4jx1")]
layout_mode = 0
offset_left = 685.0
offset_top = 20.0
offset_right = 1110.0
offset_bottom = 55.0

[node name="PauseButton" type="Button" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 112.0
offset_bottom = 40.0
toggle_mode = true
text = "Pause"

[node name="TempTrashCount" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 64.0
offset_right = 56.0
offset_bottom = 87.0

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
